# phu-fair-kid-67

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  update_test_reference.cpp
.github/workflows/: build.yml  calibration-sweep.yml  create-sub-issues.yml  release.yml
build-plugin/: CMakeCache.txt
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_test/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  phu_circuit_tests  phu_circuit_tests-b12d07c_include.cmake  phu_circuit_tests-b12d07c_tests.cmake  phu_dsp_tests  phu_dsp_tests-b12d07c_include.cmake  phu_dsp_tests-b12d07c_tests.cmake
calibration/: Calibration-Plan.md  New-Calibration-Apporach-Plan.md  New-Calibration-Approach-Plan.md
calibration/notebooks/: calibration_sweep_visualization.ipynb
calibration/reference/: Transfere-Curve-1.csv  Transfere-Curve-2.csv  Transfere-Curve-3.csv  Transfere-Curve-4.csv  Transfere-Curve-5.csv  transfer_curve_ref_thresh0v0.csv  transfer_curve_ref_thresh10v0.csv  transfer_curve_ref_thresh2v0.csv  transfer_curve_ref_thresh2v8.csv  transfer_curve_ref_thresh3v5.csv
calibration/reference-new/: ac_threshold_fully_cw_dc_slightly_ccw.csv  ac_threshold_fully_cw_dc_slightly_cw.csv  ac_threshold_slightly_cw.csv  factory-adjusted_condition.csv  straight_amplifier.csv
calibration/references-new/: graph1_straight_amplifier.csv  graph2_light_compression_dashed.csv  graph3_factory_adjusted.csv  graph4_maximum_compression.csv  graph5_heavy_ac_minimal_dc.csv
calibration/scripts/: compare_to_reference.py  fit_ac_dc.py  generate_transfer_references.ps1  lock_and_regenerate.ps1  run_curve_family.ps1  scan_sidechain_gain.py  sweep_global_calibration.ps1  sweep_global_calibration.sh
docs/: BUILDING.md  CALIBRATION_PROTOCOL.md  ManualReferencePlot.md  SESSION_PROGRESS_2026-05-14.md  TOOLS_AND_SCRIPTS.md  USER_GUIDE.md  calibration-workflow.md  fairchild670-spec-traceability.md  performance-analysis.md
scripts/: analyze_calibration_sweep.py  find-cmake.ps1  generate_transfer_references.ps1  install-linux-deps.sh  lock_and_regenerate.ps1  plot_timing.py  plot_transfer.py  sweep_global_calibration.ps1  sweep_global_calibration.sh
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/DSP/: DbConversion.h  UnitScaling.h
src/DSP/Circuit/: Circuit.cpp  Circuit.h
src/DSP/Circuit/Elements/: Capacitor.h  Inductor.h  Resistor.h  VoltageSource.h
src/DSP/Circuit/Nonlinear/: NR.cpp  NR.h  TriodeKoren.cpp  TriodeKoren.h
src/DSP/Models/: TubeStage.cpp  TubeStage.h
src/DSP/Models/Fairchild/: Fairchild670Core.cpp  Fairchild670Core.h  TubePresets6386.h  VariableMuPushPullStage.cpp  VariableMuPushPullStage.h  VariableMuStage.cpp  VariableMuStage.h
src/DSP/Models/Sidechain/: RectifierDetector.cpp  RectifierDetector.h  SoftRectifierDetector.h  TimingNetwork.cpp  TimingNetwork.h  TimingNetworkAdapter.h
src/DSP/Models/Transformer/: TransformerLinear.cpp  TransformerLinear.h  TransformerSecondOrder.cpp  TransformerSecondOrder.h
src/DSP/Utils/: OversamplingChain.cpp  OversamplingChain.h
tests/: CMakeLists.txt  CircuitLinearTests.cpp  DetectorTests.cpp  Fairchild670CoreTests.cpp  NRPolicyTests.cpp  SoftRectifierDetectorTests.cpp  TimingConformanceTests.cpp  TransferCurveTests.cpp  TransferFamilyConformanceTests.cpp  TransformerCouplingTests.cpp  TransformerLinearTests.cpp  TransformerSecondOrderTests.cpp  TriodeKorenTests.cpp  TubeStageTests.cpp  VariableMuPushPullTests.cpp  VariableMuTests.cpp  test_dsp.cpp  test_placeholder.cpp  transfer_curve_ref_thresh0v0.csv  transfer_curve_ref_thresh10v0.csv  transfer_curve_ref_thresh2v0.csv  transfer_curve_ref_thresh2v8.csv  transfer_curve_ref_thresh3v5.csv  transfer_curve_reference.csv
tools/: CMakeLists.txt  calibrate.cpp
